# SSoni_Bot

./: README.md
src/HERoEHS-SSoni-msgs/ssoni_action_module_msgs/: CMakeLists.txt  package.xml
src/HERoEHS-SSoni-msgs/ssoni_arm_module_msgs/: CMakeLists.txt  package.xml
src/HERoEHS-SSoni-msgs/ssoni_perception_msgs/: CMakeLists.txt  package.xml
src/HERoEHS-SSoni-msgs/ssoni_perception_msgs/msg/: PeoplePositionArray.msg
src/HERoEHS-SSoni-msgs/ssoni_vision_msgs/: CMakeLists.txt  package.xml
src/HERoEHS-SSoni-msgs/ssoni_vision_msgs/msg/: FoundObject.msg
src/SSoni_mobile/: Readme.md
src/SSoni_mobile/king_donation_bot/mobile_manager/: CMakeLists.txt  package.xml
src/SSoni_mobile/king_donation_bot/mobile_manager/include/mobile_manager/: mobile_manager_node.h
src/SSoni_mobile/king_donation_bot/mobile_manager/launch/: mobile_manager.launch  mobile_manager_gazebo.launch
src/SSoni_mobile/king_donation_bot/mobile_manager/src/: mobile_manager_node.cpp
src/SSoni_mobile/king_donation_bot/mobile_robot/include/mobile_robot/: motor_algorithm.h
src/SSoni_mobile/king_donation_bot/mobile_robot/src/: motor_algorithm.cpp
